--- a/homework-story.html
+++ b/homework-story.html
@@ -38,7 +38,7 @@
 
 <p>So, between the Raptors and the Spurs, the rankings are thus:</p>
 
-<ol reversed>
+<ol start="5">
     <li>Philadelphia 76ers</li>
     <li>Utah Jazz</li>
     <li>Oklahoma City Thunder</li>
